CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.5

	- The scheduler incorrectly deleted hardwired remote printers
	  on system sleep.
	- The scheduler would abort if a bad browse protocol name
	  was listed in the cupsd.conf file.
	- The online cupsd.conf help file incorrectly showed "dns-sd"
	  instead of "dnssd" for Bonjour sharing.
	- The scheduler could crash changing the port-monitor value.
	- The scheduler generated CoreFoundation errors when run
	  as a background process.
	- When printing with number-up > 1, it was possible to get
	  an extra blank page.


CHANGES IN CUPS V1.3.4

	- Documentation updates (STR #2560, STR #2563, STR #2569)
	- CUPS now maps the "nb" locale to "no" on all platforms
	  (STR #2575)
	- CUPS did not work with a Windows 2003 R2 KDC (STR #2568)
	- ippReadIO() could read past the end of a buffer (STR
	  #2561)
	- The scheduler would crash on shutdown if it was unable
	  to create a Kerberos context.
	- Multiple AuthTypes in cupsd.conf did not work (STR
	  #2545)
	- The snmp.conf file referenced the wrong man page (STR
	  #2564)
	- The cupsaddsmb program didn't handle domain sockets
	  properly (STR #2556)
	- The scheduler now validates device URIs when adding
	  printers.
	- Updated httpSeparateURI() to support hostnames with
	  the backslash character.
	- Updated the Japanese localization (STR #2546)
	- The parallel backend now gets the current IEEE-1284
	  device ID string on Linux (STR #2553)
	- The IPP backend now checks the job status at
	  variable intervals (from 1 to 10 seconds) instead
	  of every 10 seconds for faster remote printing
	  (STR #2548)
	- "lpr -p" and "lpr -l" did not work (STR #2544)
	- Compilation failed when a previous version of CUPS
	  was installed and was included in the SSL include
	  path (STR #2538)
	- The scheduler did not reject requests with charsets
	  other than US-ASCII or UTF-8, and the CUPS API
	  incorrectly passed the locale charset to the scheduler
	  instead of UTF-8 (STR #2537)