@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.5
 
+	- The LPD and IPP backends did not default to the correct
+	  port numbers when using alternate scheme names.
 	- The scheduler incorrectly deleted hardwired remote printers
 	  on system sleep.
 	- The scheduler would abort if a bad browse protocol name
